--- a/www/css/app.css
+++ b/www/css/app.css
@@ -430,12 +430,13 @@ img {
   color: rgba(255, 255, 255, .8);
   margin: 0;
   font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .event-swiper p {
   color: rgba(255, 255, 255, .6);
   margin: 0;
-  font-size: 20px;
+  font-size: .9rem;
 }
 
 .lightbox {
